Revision history for Dinotrace

The contributors that suggested a given feature are shown in [].
	
* Dinotrace 9.3f 

****	Fix signal radix being lost when trace is reread.  [Uwe Bonnes]

* Dinotrace 9.3e 2/27/2007

****	Add DESTDIR "make install" rule for RPMs.  [Werner Hoch]

* Dinotrace 9.3d 2/27/2007

****	Fix "make uninstall" deleting data area (Sorry!!!).  [Dinesh]

* Dinotrace 9.3c 1/2/2007

***	Add signed decimal radix.  [by Uwe Bonnes]

***	Builds now take place in "obj_dir" to keep them distinct from sources.

****	Fix VCD files with 10 or 100 femtosecond resolution.

****	Fix dinotrace.el complaint about bad verilog-mode.el version.
	[Joseph Holtgrefe]

****	Fix core dump when no fonts are available.  [Dmitri Belimov]

* Dinotrace 9.3b 3/13/2006

***	Fix line number incrementing in Verilog errors. [Uwe Bonnes]

* Dinotrace 9.3a 6/13/2005

***	Fix too small buttons under openmotif.

***	Fix missing keyboard accelerators under openmotif.

* Dinotrace 9.2b 5/03/2005

***	The default extension for Verilog dumps is now .vcd instead of .dmp.

****    Fix traces containing only real numbers.  [Vitor Antunes]

****	Fix segfault when doing signal adds.  [Guy Hutchinson]

* Dinotrace 9.2a 12/20/2004

**      NEWS file is now renamed Changes.

**	Added signal note and cursor note menu items.  [Shane Coffman]

**	Searching for a non-vector signal will now return a vectored signal.
	For example a pattern "Foo" will find "Foo[1:0]."  [Shane Coffman]

****	Save cursor notes in Customize save files.  [Thomas Dmukauskas]

****	Fix compilation errors on GCC 3.4.  [Jaroslaw Gorny]

****	Fix segfault when using grid timerep without grid. [Scott Venier]

* Dinotrace 9.1n 10/22/2004

****	Fix slow file reading with >128 bit __en signals. [Ta-Chung Chang]

****	Fix signed analog display.  [Uwe Bonnes]

* Dinotrace 9.1m 04/21/2004

***	Fix duplicate and embeded __en cosmos signals. [Krishna Rangan]

****	Fix buffer overrun bugs.  [Samuel Ho]

* Dinotrace 9.1k 06/06/2003
